# yeat

./: .coveragerc  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  cli.py  environment.yml  pyproject.toml  pytest.ini  setup.cfg  setup.py  velvet.yml
yeat/: Snakefile  __init__.py  _version.py  cli.py  config.py
yeat/assembly/: Snakefile_Spades  __init__.py  config.py
yeat/bandage/: Snakefile  __init__.py  bandage.py
yeat/cli/: __init__.py  assembly.py  auto_pop.py  aux.py  cli.py  config.py  downsample.py  illumina.py  just_yeat_it.py  long.py  sample.py  samples.py  short.py  yeat_auto.py
yeat/config/: Single  __init__.py  assembly.py  auto_pop.py  config.py  global_settings.py  sample.py
yeat/config/assemblers/: __init__.py  assembler.py  canu.py  flye.py  hifiasm.py  hifiasm_meta.py  megahit.py  metamdbg.py  myloasm.py  penguin.py  spades.py  unicycler.py  velvet.py  verkko.py
yeat/tests/: __init__.py  test_assembler.py  test_assemblers.py  test_assembly.py  test_aux.py  test_bandage.py  test_cli.py  test_config.py  test_downsample.py  test_grid.py  test_hybrid.py  test_just_yeat_it.py  test_meta.py  test_oxford.py  test_pacbio.py  test_paired.py  test_sample.py  test_single.py  test_yeat.py  test_yeat_auto.py
yeat/workflow/: Assemblers.smk  Bandage  Bandage.smk  Hybrid  Hybrid.smk  Oxford  Oxford.smk  Pacbio  Pacbio.smk  Paired  Paired.smk  Shared  Shared.smk  Single  Single.smk  Snakefile  Snakefile.smk  __init__.py  aux.py  yeat.smk
yeat/workflows/: __init__.py  bandage.py  long.py  short.py  workflows.py
(+64 files in other folders)
