[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE


[versioneer]
VCS = git
style = pep440
versionfile_source = yeat/_version.py
versionfile_build = yeat/_version.py
tag_prefix =
parentdir_prefix = yeat-